(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1561,3 +1561,6 @@ tags:
 * [2019-06-19 Left Side of Comparison](/2019/06/19/left-side-of-comparison)
 * [2019-06-20 在 Web Request 中使用会话变量](/2019/06/20/using-session-variables-in-web-requests)
 * [2019-06-21 使用 GeoCoding（第 1 部分）](/2019/06/21/working-with-geocoding-part-1)
+* [2019-06-24 使用 GeoCoding：将地址转换为经纬度（第 2 部分）](/2019/06/24/geocoding-converting-addresses-to-lat-long-part-2)
+* [2019-06-25 使用 GeoCoding：将经纬度转换为地址（第 3 部分）](/2019/06/25/geocoding-converting-lat-long-to-addresses-part-3)
+* [2019-06-26 使用 GeoCoding：文本扫描（第 4 部分）](/2019/06/26/geocoding-text-scanning-part-4)
