(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1564,3 +1564,5 @@ tags:
 * [2019-06-24 使用 GeoCoding：将地址转换为经纬度（第 2 部分）](/2019/06/24/geocoding-converting-addresses-to-lat-long-part-2)
 * [2019-06-25 使用 GeoCoding：将经纬度转换为地址（第 3 部分）](/2019/06/25/geocoding-converting-lat-long-to-addresses-part-3)
 * [2019-06-26 使用 GeoCoding：文本扫描（第 4 部分）](/2019/06/26/geocoding-text-scanning-part-4)
+* [2019-06-27 使用 GeoCoding：情感分析（第 5 部分）](/2019/06/27/geocoding-sentiment-analysis-part-5)
+* [2019-06-28 啤酒挑战结果：最短的密码分析代码](/2019/06/28/beer-challenge-results-shortest-code-for-password-analysis)
