(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1566,3 +1566,7 @@ tags:
 * [2019-06-26 使用 GeoCoding：文本扫描（第 4 部分）](/2019/06/26/geocoding-text-scanning-part-4)
 * [2019-06-27 使用 GeoCoding：情感分析（第 5 部分）](/2019/06/27/geocoding-sentiment-analysis-part-5)
 * [2019-06-28 啤酒挑战结果：最短的密码分析代码](/2019/06/28/beer-challenge-results-shortest-code-for-password-analysis)
+
+2019 年 07 月
+-------------
+* [2019-07-01 用 Out-GridView 做为输出窗口](/2019/07/01/use-out-gridview-as-output-window)
