--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1573,3 +1573,4 @@ tags:
 * [2019-07-03 覆盖 Out-Default（第 1 部分）](/2019/07/03/overriding-out-default-part-1)
 * [2019-07-05 覆盖 Out-Default（第 2 部分）](/2019/07/05/overriding-out-default-part-2)
 * [2019-07-09 覆盖 Out-Default（第 3 部分）](/2019/07/09/overriding-out-default-part-3)
+* [2019-07-11 检测按键](/2019/07/11/detecting-key-presses)
