(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1574,3 +1574,7 @@ tags:
 * [2019-07-05 覆盖 Out-Default（第 2 部分）](/2019/07/05/overriding-out-default-part-2)
 * [2019-07-09 覆盖 Out-Default（第 3 部分）](/2019/07/09/overriding-out-default-part-3)
 * [2019-07-11 检测按键](/2019/07/11/detecting-key-presses)
+* [2019-07-15 提高管道速度](/2019/07/15/increasing-pipeline-speed)
+* [2019-07-17 用哈希表提高代码可读性](/2019/07/17/use-hash-tables-to-make-code-readable)
+* [2019-07-19 使用始终可见的弹出对话框](/2019/07/19/using-pop-up-dialogs-that-are-always-visible)
+* [2019-07-23 通过 PowerShell 安装 Google Chrome](/2019/07/23/installing-google-chrome-via-powershell)
