(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1083,7 +1083,7 @@ tags:
 * [2017-11-16 Getting File Extension](/2017/11/16/getting-file-extension)
 * [2017-11-20 临时禁用 PSReadLine 模块](/2017/11/20/temporarily-disabling-psreadline-module)
 * [2017-11-21 极简的错误处理](/2017/11/21/minimalistic-error-handling)
-* [2017-11-22 Understanding .NET Type Name Variants in PowerShell](/2017/11/22/understanding-net-type-name-variants-in-powershell)
+* [2017-11-22 理解 PowerShell 中 .NET 类型名称的变体](/2017/11/22/understanding-net-type-name-variants-in-powershell)
 * [2017-11-23 从 .PSD1 文件中读取数据](/2017/11/23/reading-data-from-psd1-files)
 * [2017-11-24 在 PowerShell 5+ 中读取 .PSD1 文件](/2017/11/24/reading-data-from-psd1-files-in-powershell-5)
 * [2017-11-27 将哈希表转换为 JSON](/2017/11/27/converting-hash-tables-to-json)
@@ -1353,7 +1353,7 @@ tags:
 * [2018-10-11 Adding New Incrementing Number Column in a Grid View Window](/2018/10/11/adding-new-incrementing-number-column-in-a-grid-view-window)
 * [2018-10-12 Getting AD Users with Selected First Letters](/2018/10/12/getting-ad-users-with-selected-first-letters)
 * [2018-10-15 Retrieving Outlook Calendar Entries](/2018/10/15/retrieving-outlook-calendar-entries)
-* [2018-10-16 Keeping Track of Script Execution](/2018/10/16/keeping-track-of-script-execution)
+* [2018-10-16 持续监视脚本的运行](/2018/10/16/keeping-track-of-script-execution)
 * [2018-10-17 性能（第 1 部分）：从 6 分钟到 2 秒钟](/2018/10/17/performance-part-1-from-6-min-to-2-sec)
 * [2018-10-18 性能（第 2 部分）：从 2 秒到 200 毫秒](/2018/10/18/performance-part-2-from-2-sec-to-200ms)
 * [2018-10-19 性能（第 3 部分）：更快的管道函数](/2018/10/19/performance-part-3-faster-pipeline-functions)
@@ -1578,3 +1578,4 @@ tags:
 * [2019-07-17 用哈希表提高代码可读性](/2019/07/17/use-hash-tables-to-make-code-readable)
 * [2019-07-19 使用始终可见的弹出对话框](/2019/07/19/using-pop-up-dialogs-that-are-always-visible)
 * [2019-07-23 通过 PowerShell 安装 Google Chrome](/2019/07/23/installing-google-chrome-via-powershell)
+* [2019-07-25 从 Windows 中转储个人密码](/2019/07/25/dumping-personal-passwords-from-windows)
