(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1579,3 +1579,4 @@ tags:
 * [2019-07-19 使用始终可见的弹出对话框](/2019/07/19/using-pop-up-dialogs-that-are-always-visible)
 * [2019-07-23 通过 PowerShell 安装 Google Chrome](/2019/07/23/installing-google-chrome-via-powershell)
 * [2019-07-25 从 Windows 中转储个人密码](/2019/07/25/dumping-personal-passwords-from-windows)
+* [2019-07-29 转储 Chrome 的所有密码](/2019/07/29/dumping-all-passwords-from-chrome)
