--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1580,3 +1580,4 @@ tags:
 * [2019-07-23 通过 PowerShell 安装 Google Chrome](/2019/07/23/installing-google-chrome-via-powershell)
 * [2019-07-25 从 Windows 中转储个人密码](/2019/07/25/dumping-personal-passwords-from-windows)
 * [2019-07-29 转储 Chrome 的所有密码](/2019/07/29/dumping-all-passwords-from-chrome)
+* [2019-07-31 控制处理器关联性](/2019/07/31/controlling-processor-affinity)
