(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1581,3 +1581,8 @@ tags:
 * [2019-07-25 从 Windows 中转储个人密码](/2019/07/25/dumping-personal-passwords-from-windows)
 * [2019-07-29 转储 Chrome 的所有密码](/2019/07/29/dumping-all-passwords-from-chrome)
 * [2019-07-31 控制处理器关联性](/2019/07/31/controlling-processor-affinity)
+
+2019 年 08 月
+-------------
+* [2019-08-02 查找隐藏的 PowerShell 应用](/2019/08/02/finding-hidden-powershell-applications)
+* [2019-08-06 接受屏蔽的密码](/2019/08/06/accepting-masked-passwords)
