(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1586,3 +1586,4 @@ tags:
 -------------
 * [2019-08-02 查找隐藏的 PowerShell 应用](/2019/08/02/finding-hidden-powershell-applications)
 * [2019-08-06 接受屏蔽的密码](/2019/08/06/accepting-masked-passwords)
+* [2019-08-08 为输出编号（第 1 部分）](/2019/08/08/numbering-output-part-1)
