--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1587,3 +1587,5 @@ tags:
 * [2019-08-02 查找隐藏的 PowerShell 应用](/2019/08/02/finding-hidden-powershell-applications)
 * [2019-08-06 接受屏蔽的密码](/2019/08/06/accepting-masked-passwords)
 * [2019-08-08 为输出编号（第 1 部分）](/2019/08/08/numbering-output-part-1)
+* [2019-08-12 验证 Active Directory 凭据](/2019/08/12/validating-active-directory-credentials)
+* [2019-08-14 通过 Web Service 做单位转换](/2019/08/14/unit-conversion-via-web-service)
