(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1589,3 +1589,8 @@ tags:
 * [2019-08-08 为输出编号（第 1 部分）](/2019/08/08/numbering-output-part-1)
 * [2019-08-12 验证 Active Directory 凭据](/2019/08/12/validating-active-directory-credentials)
 * [2019-08-14 通过 Web Service 做单位转换](/2019/08/14/unit-conversion-via-web-service)
+* [2019-08-16 测试网站的可用性](/2019/08/16/test-web-site-availability)
+* [2019-08-20 转换 HTTP 响应码](/2019/08/20/converting-http-response-codes)
+* [2019-08-22 自动创建 HTTP 响应码清单](/2019/08/22/auto-creating-a-list-of-http-response-codes)
+* [2019-08-26 使用很棒的 Export-Excel Cmdlet（第 1 部分）](/2019/08/26/using-awesome-export-excel-cmdlet-part-1)
+* [2019-08-28 使用很棒的 Export-Excel Cmdlet（第 2 部分）](/2019/08/28/using-awesome-export-excel-cmdlet-part-2)
