(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1600,3 +1600,5 @@ tags:
 -------------
 * [2019-09-03 使用超棒的 Export-Excel Cmdlet（第 4 部分）](/2019/09/03/using-awesome-export-excel-cmdlet-part-4)
 * [2019-09-05 使用超棒的 Export-Excel Cmdlet（第 5 部分）](/2019/09/05/using-awesome-export-excel-cmdlet-part-5)
+* [2019-09-09 重设 Winsock](/2019/09/09/resetting-winsock)
+* [2019-09-11 检测存储问题](/2019/09/11/detecting-storage-issues)
