--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1602,3 +1602,4 @@ tags:
 * [2019-09-05 使用超棒的 Export-Excel Cmdlet（第 5 部分）](/2019/09/05/using-awesome-export-excel-cmdlet-part-5)
 * [2019-09-09 重设 Winsock](/2019/09/09/resetting-winsock)
 * [2019-09-11 检测存储问题](/2019/09/11/detecting-storage-issues)
+* [2019-09-13 检测键盘按键](/2019/09/13/detecting-key-press-1)
