(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1603,3 +1603,4 @@ tags:
 * [2019-09-09 重设 Winsock](/2019/09/09/resetting-winsock)
 * [2019-09-11 检测存储问题](/2019/09/11/detecting-storage-issues)
 * [2019-09-13 检测键盘按键](/2019/09/13/detecting-key-press-1)
+* [2019-09-17 实时日志处理](/2019/09/17/real-time-log-processing)
