--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1604,3 +1604,4 @@ tags:
 * [2019-09-11 检测存储问题](/2019/09/11/detecting-storage-issues)
 * [2019-09-13 检测键盘按键](/2019/09/13/detecting-key-press-1)
 * [2019-09-17 实时日志处理](/2019/09/17/real-time-log-processing)
+* [2019-09-19 查找公网 IP 地址](/2019/09/19/finding-public-ip-address-1)
