(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1605,3 +1605,6 @@ tags:
 * [2019-09-13 检测键盘按键](/2019/09/13/detecting-key-press-1)
 * [2019-09-17 实时日志处理](/2019/09/17/real-time-log-processing)
 * [2019-09-19 查找公网 IP 地址](/2019/09/19/finding-public-ip-address-1)
+* [2019-09-23 安装 PowerShell Core](/2019/09/23/installing-powershell-core)
+* [2019-09-25 使用最新版的 PowerShell Core](/2019/09/25/playing-with-latest-powershell-core-version)
+* [2019-09-27 使用 Windows 10 内置的 SSH 支持](/2019/09/27/built-in-ssh-support-in-windows-10)
