(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1608,3 +1608,9 @@ tags:
 * [2019-09-23 安装 PowerShell Core](/2019/09/23/installing-powershell-core)
 * [2019-09-25 使用最新版的 PowerShell Core](/2019/09/25/playing-with-latest-powershell-core-version)
 * [2019-09-27 使用 Windows 10 内置的 SSH 支持](/2019/09/27/built-in-ssh-support-in-windows-10)
+
+2019 年 10 月
+-------------
+* [2019-10-01 在 PowerShell 脚本中嵌入二进制文件（图片、DLL）](/2019/10/01/embedding-binaries-pictures-dlls-in-powershell-scripts)
+* [2019-10-03 将 SecureString 转换为文本](/2019/10/03/converting-securestring-to-text)
+* [2019-10-07 测试](/2019/10/07/testing-password-strength)
