(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1614,3 +1614,4 @@ tags:
 * [2019-10-01 在 PowerShell 脚本中嵌入二进制文件（图片、DLL）](/2019/10/01/embedding-binaries-pictures-dlls-in-powershell-scripts)
 * [2019-10-03 将 SecureString 转换为文本](/2019/10/03/converting-securestring-to-text)
 * [2019-10-07 测试](/2019/10/07/testing-password-strength)
+* [2019-10-09 简易的 PowerShell 聊天室](/2019/10/09/simple-powershell-chat)
