(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1615,3 +1615,10 @@ tags:
 * [2019-10-03 将 SecureString 转换为文本](/2019/10/03/converting-securestring-to-text)
 * [2019-10-07 测试](/2019/10/07/testing-password-strength)
 * [2019-10-09 简易的 PowerShell 聊天室](/2019/10/09/simple-powershell-chat)
+* [2019-10-11 创建 NT4 密码哈希](/2019/10/11/creating-nt4-password-hashes)
+* [2019-10-15 加密文本（第 1 部分）](/2019/10/15/encrypting-text-part-1)
+* [2019-10-17 加密文本（第 2 部分）](/2019/10/17/encrypting-text-part-2)
+* [2019-10-21 对象的魔法（第 1 部分）](/2019/10/21/object-magic-part-1)
+* [2019-10-23 对象的魔法（第 2 部分）](/2019/10/23/object-magic-part-2)
+* [2019-10-25 对象的魔法（第 3 部分）](/2019/10/25/object-magic-part-3)
+* [2019-10-29 对象的魔法（第 4 部分）](/2019/10/29/object-magic-part-4)
