(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1622,3 +1622,9 @@ tags:
 * [2019-10-23 对象的魔法（第 2 部分）](/2019/10/23/object-magic-part-2)
 * [2019-10-25 对象的魔法（第 3 部分）](/2019/10/25/object-magic-part-3)
 * [2019-10-29 对象的魔法（第 4 部分）](/2019/10/29/object-magic-part-4)
+* [2019-10-31 将对象转换为哈希表](/2019/10/31/turning-objects-into-hash-tables-2)
+
+2019 年 11 月
+-------------
+* [2019-11-04 WMI Explorer](/2019/11/04/wmi-explorer)
+* [2019-11-06 探索 PowerShell 模块](/2019/11/06/exploring-powershell-modules-2)
