--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1628,3 +1628,6 @@ tags:
 -------------
 * [2019-11-04 WMI Explorer](/2019/11/04/wmi-explorer)
 * [2019-11-06 探索 PowerShell 模块](/2019/11/06/exploring-powershell-modules-2)
+* [2019-11-08 将 Word 文档从 .doc 格式转为 .docx 格式（第 1 部分）](/2019/11/08/converting-word-documents-from-doc-to-docx-part-1)
+* [2019-11-12 将 Word 文档从 .doc 格式转为 .docx 格式（第 2 部分）](/2019/11/12/converting-word-documents-from-doc-to-docx-part-2)
+* [2019-11-14 在 PowerShell 中安全地使用 WMI（第 1 部分）](/2019/11/14/safely-using-wmi-in-powershell-part-1)
