(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1631,3 +1631,13 @@ tags:
 * [2019-11-08 将 Word 文档从 .doc 格式转为 .docx 格式（第 1 部分）](/2019/11/08/converting-word-documents-from-doc-to-docx-part-1)
 * [2019-11-12 将 Word 文档从 .doc 格式转为 .docx 格式（第 2 部分）](/2019/11/12/converting-word-documents-from-doc-to-docx-part-2)
 * [2019-11-14 在 PowerShell 中安全地使用 WMI（第 1 部分）](/2019/11/14/safely-using-wmi-in-powershell-part-1)
+* [2019-11-18 在 PowerShell 中安全地使用 WMI（第 2 部分）](/2019/11/18/safely-using-wmi-in-powershell-part-2)
+* [2019-11-20 在 PowerShell 中安全地使用 WMI（第 3 部分）](/2019/11/20/safely-using-wmi-in-powershell-part-3)
+* [2019-11-22 在 PowerShell 中安全地使用 WMI（第 4 部分）](/2019/11/22/safely-using-wmi-in-powershell-part-4)
+* [2019-11-26 Get-ComputerInfo 和 systeminfo.exe 的对比（第 1 部分）](/2019/11/26/get-computerinfo-vs-systeminfo-exe-part-1)
+* [2019-11-28 Get-ComputerInfo 和 systeminfo.exe 的对比（第 2 部分）](/2019/11/28/get-computerinfo-vs-systeminfo-exe-part-2)
+
+2019 年 12 月
+-------------
+* [2019-12-02 PowerShell 7 中的三元操作符](/2019/12/02/powershell-7-ternary-operator)
+* [2019-12-04 -RepeatHeader 参数](/2019/12/04/repeatheader-parameter)
