(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1641,3 +1641,7 @@ tags:
 -------------
 * [2019-12-02 PowerShell 7 中的三元操作符](/2019/12/02/powershell-7-ternary-operator)
 * [2019-12-04 -RepeatHeader 参数](/2019/12/04/repeatheader-parameter)
+* [2019-12-06 Foreach -parallel（第 1 部分：PowerShell 7）](/2019/12/06/foreach--parallel-part-1-powershell-7)
+* [2019-12-10 Foreach -parallel (第 2 部分：Windows PowerShell)](/2019/12/10/foreach--parallel-part-2-windows-powershell)
+* [2019-12-12 Foreach -parallel (第 3 部分：批量 Ping)](/2019/12/12/foreach--parallel-part-3-mass-ping)
+* [2019-12-16 使用一个计时器来测量执行时间](/2019/12/16/using-a-stopwatch-to-measure-execution-times)
