(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1645,3 +1645,4 @@ tags:
 * [2019-12-10 Foreach -parallel (第 2 部分：Windows PowerShell)](/2019/12/10/foreach--parallel-part-2-windows-powershell)
 * [2019-12-12 Foreach -parallel (第 3 部分：批量 Ping)](/2019/12/12/foreach--parallel-part-3-mass-ping)
 * [2019-12-16 使用一个计时器来测量执行时间](/2019/12/16/using-a-stopwatch-to-measure-execution-times)
+* [2019-12-18 退出 PowerShell 管道（第 1 部分：Select-Object）](/2019/12/18/aborting-the-powershell-pipeline-part-1-select-object)
