(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1646,3 +1646,14 @@ tags:
 * [2019-12-12 Foreach -parallel (第 3 部分：批量 Ping)](/2019/12/12/foreach--parallel-part-3-mass-ping)
 * [2019-12-16 使用一个计时器来测量执行时间](/2019/12/16/using-a-stopwatch-to-measure-execution-times)
 * [2019-12-18 退出 PowerShell 管道（第 1 部分：Select-Object）](/2019/12/18/aborting-the-powershell-pipeline-part-1-select-object)
+* [2019-12-20 退出 PowerShell 管道（第 2 部分：手动退出）](/2019/12/20/aborting-the-powershell-pipeline-part-2-manual-abort)
+* [2019-12-24 列出已安装的更新（第 1 部分）](/2019/12/24/listing-installed-updates-part-1)
+* [2019-12-26 列出已安装的更新（第 2 部分）](/2019/12/26/listing-installed-updates-part-2)
+* [2019-12-30 探索即插即用设备（第 1 部分）](/2019/12/30/exploring-plug-play-devices-part-1)
+
+2020 年
+=======
+
+2020 年 01 月
+-------------
+* [2020-01-01 探索即插即用设备（第 2 部分）](/2020/01/01/exploring-plug-play-devices-part-2)
