--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1657,3 +1657,7 @@ tags:
 2020 年 01 月
 -------------
 * [2020-01-01 探索即插即用设备（第 2 部分）](/2020/01/01/exploring-plug-play-devices-part-2)
+* [2020-01-03 探索即插即用设备（第 3 部分）](/2020/01/03/exploring-plug-play-devices-part-3)
+* [2020-01-07 探索即插即用设备（第 4 部分）](/2020/01/07/exploring-plug-play-devices-part-4)
+* [2020-01-09 测试网络连接（第 1 部分）](/2020/01/09/testing-network-connections-part-1)
+* [2020-01-13 测试网络连接（第 2 部分）](/2020/01/13/testing-network-connections-part-2)
