(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1662,3 +1662,5 @@ tags:
 * [2020-01-09 测试网络连接（第 1 部分）](/2020/01/09/testing-network-connections-part-1)
 * [2020-01-13 测试网络连接（第 2 部分）](/2020/01/13/testing-network-connections-part-2)
 * [2020-01-15 杀死无响应的进程](/2020/01/15/killing-non-responding-processes)
+* [2020-01-17 隐藏启动 PowerShell 脚本](/2020/01/17/launching-powershell-scripts-invisibly)
+* [2020-01-21 测试等待重启](/2020/01/21/testing-for-pending-reboots)
