--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1664,3 +1664,5 @@ tags:
 * [2020-01-15 杀死无响应的进程](/2020/01/15/killing-non-responding-processes)
 * [2020-01-17 隐藏启动 PowerShell 脚本](/2020/01/17/launching-powershell-scripts-invisibly)
 * [2020-01-21 测试等待重启](/2020/01/21/testing-for-pending-reboots)
+* [2020-01-23 安装 ActiveDirectory 模块](/2020/01/23/installing-activedirectory-module)
+* [2020-01-27 在 Windows PowerShell 和 PowerShell Core 中共享模块](/2020/01/27/sharing-modules-in-windows-powershell-and-powershell-core)
