(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1666,3 +1666,4 @@ tags:
 * [2020-01-21 测试等待重启](/2020/01/21/testing-for-pending-reboots)
 * [2020-01-23 安装 ActiveDirectory 模块](/2020/01/23/installing-activedirectory-module)
 * [2020-01-27 在 Windows PowerShell 和 PowerShell Core 中共享模块](/2020/01/27/sharing-modules-in-windows-powershell-and-powershell-core)
+* [2020-01-29 下载 PowerShell 语言参考（或任意文件）](/2020/01/29/downloading-powershell-language-reference-or-any-file)
