(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1668,3 +1668,8 @@ tags:
 * [2020-01-27 在 Windows PowerShell 和 PowerShell Core 中共享模块](/2020/01/27/sharing-modules-in-windows-powershell-and-powershell-core)
 * [2020-01-29 下载 PowerShell 语言参考（或任意文件）](/2020/01/29/downloading-powershell-language-reference-or-any-file)
 * [2020-01-31 获取原始的 PowerShell 语言说明书](/2020/01/31/grab-original-powershell-language-specification)
+
+2020 年 02 月
+-------------
+* [2020-02-04 安装免费的 Chocolatey 包管理器](/2020/02/04/installing-free-chocolatey-package-management)
+* [2020-02-06 安装并试运行 Windows Terminal](/2020/02/06/installing-and-test-driving-windows-terminal)
