(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1626,7 +1626,7 @@ tags:
 
 2019 年 11 月
 -------------
-* [2019-11-04 WMI Explorer](/2019/11/04/wmi-explorer)
+* [2019-11-04 WMI 浏览器](/2019/11/04/wmi-explorer)
 * [2019-11-06 探索 PowerShell 模块](/2019/11/06/exploring-powershell-modules-2)
 * [2019-11-08 将 Word 文档从 .doc 格式转为 .docx 格式（第 1 部分）](/2019/11/08/converting-word-documents-from-doc-to-docx-part-1)
 * [2019-11-12 将 Word 文档从 .doc 格式转为 .docx 格式（第 2 部分）](/2019/11/12/converting-word-documents-from-doc-to-docx-part-2)
