(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1679,3 +1679,12 @@ tags:
 * [2020-02-18 参数的智能感知（第 3 部分）](/2020/02/18/intellisense-for-parameters-part-3)
 * [2020-02-20 参数的智能感知（第 4 部分）](/2020/02/20/intellisense-for-parameters-part-4)
 * [2020-02-24 理解 $ErrorView](/2020/02/24/understanding-errorview)
+* [2020-02-26 带颜色的控制台硬拷贝](/2020/02/26/creating-colorful-console-hardcopies)
+* [2020-02-28 神秘的动态参数完成器](/2020/02/28/secret-dynamic-argument-completer)
+
+2020 年 03 月
+-------------
+* [2020-03-03 列出安装的应用程序（第 1 部分）](/2020/03/03/listing-installed-applications-part-1)
+* [2020-03-05 列出安装的应用程序（第 2 部分）](/2020/03/05/listing-installed-applications-part-2)
+* [2020-03-09 动态参数完成（第 1 部分）](/2020/03/09/dynamic-argument-completion-part-1)
+* [2020-03-11 动态参数完成（第 2 部分）](/2020/03/11/dynamic-argument-completion-part-2)
