(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1688,3 +1688,17 @@ tags:
 * [2020-03-05 列出安装的应用程序（第 2 部分）](/2020/03/05/listing-installed-applications-part-2)
 * [2020-03-09 动态参数完成（第 1 部分）](/2020/03/09/dynamic-argument-completion-part-1)
 * [2020-03-11 动态参数完成（第 2 部分）](/2020/03/11/dynamic-argument-completion-part-2)
+* [2020-03-13 动态参数完成（第 3 部分）](/2020/03/13/dynamic-argument-completion-part-3)
+* [2020-03-17 动态参数完成（第 4 部分）](/2020/03/17/dynamic-argument-completion-part-4)
+* [2020-03-19 PowerShell 技能连载 - 动态参数完成（第 5 部分）](/2020/03/19/dynamic-argument-completion-part-5)
+* [2020-03-23 使用 PSWindowsUpdate 管理更新](/2020/03/23/managing-updates-with-pswindowsupdate)
+* [2020-03-25 用 Carbon 添加新的 PowerShell 命令](/2020/03/25/adding-new-powershell-commands-with-carbon)
+* [2020-03-27 使用 PowerShell 探索 WMI](/2020/03/27/exploring-wmi-with-powershell)
+* [2020-03-31 处理 Out-GridView 的 Bug](/2020/03/31/dealing-with-out-gridview-bug)
+
+2020 年 04 月
+-------------
+* [2020-04-02 谨慎使用某些命令](/2020/04/02/be-careful-with-some-commands)
+* [2020-04-06 获取可用的显示分辨率](/2020/04/06/getting-available-video-resolutions)
+* [2020-04-08 管理自动磁盘检测](/2020/04/08/manage-automatic-disk-checks)
+* [2020-04-10 允许 PowerPoint 中的点击操作](/2020/04/10/enabling-clickable-powerpoint-actions)
