(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1702,3 +1702,9 @@ tags:
 * [2020-04-06 获取可用的显示分辨率](/2020/04/06/getting-available-video-resolutions)
 * [2020-04-08 管理自动磁盘检测](/2020/04/08/manage-automatic-disk-checks)
 * [2020-04-10 允许 PowerPoint 中的点击操作](/2020/04/10/enabling-clickable-powerpoint-actions)
+* [2020-04-14 安装 PowerShell 7](/2020/04/14/installing-powershell-7)
+* [2020-04-16 使用 WMI 实例路径（第 1 部分）](/2020/04/16/using-wmi-instance-paths-part-1)
+* [2020-04-20 使用 WMI 实例路径（第 2 部分）](/2020/04/20/using-wmi-instance-paths-part-2)
+* [2020-04-22 检测是否连接到计费的 WLAN](/2020/04/22/testing-for-metered-wlan)
+* [2020-04-24 使用自定义的验证器属性](/2020/04/24/using-custom-validation-attributes)
+* [2020-04-28 管理自动重启](/2020/04/28/managing-automatic-reset)
