(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1708,3 +1708,12 @@ tags:
 * [2020-04-22 检测是否连接到计费的 WLAN](/2020/04/22/testing-for-metered-wlan)
 * [2020-04-24 使用自定义的验证器属性](/2020/04/24/using-custom-validation-attributes)
 * [2020-04-28 管理自动重启](/2020/04/28/managing-automatic-reset)
+* [2020-04-30 读取机箱的 SKU](/2020/04/30/reading-chassis-sku)
+
+2020 年 05 月
+-------------
+* [2020-05-04 获取 WMI 对象的帮助](/2020/05/04/getting-help-for-wmi-objects)
+* [2020-05-06 增加新的 PowerShell 命令](/2020/05/06/adding-new-powershell-commands)
+* [2020-05-08 使 PowerShell 模块保持最新](/2020/05/08/keep-powershell-modules-up-to-date)
+* [2020-05-12 创建软件库](/2020/05/12/create-software-inventories)
+* [2020-05-14 检测泄露的密码（第 1 部分）](/2020/05/14/identifying-compromised-passwords-part-1)
