(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1717,3 +1717,14 @@ tags:
 * [2020-05-08 使 PowerShell 模块保持最新](/2020/05/08/keep-powershell-modules-up-to-date)
 * [2020-05-12 创建软件库](/2020/05/12/create-software-inventories)
 * [2020-05-14 检测泄露的密码（第 1 部分）](/2020/05/14/identifying-compromised-passwords-part-1)
+* [2020-05-18 检测泄露的密码（第 2 部分）](/2020/05/18/identifying-compromised-passwords-part-2)
+* [2020-05-20 管理 SharePoint Online](/2020/05/20/managing-sharepoint-online)
+* [2020-05-22 在 PowerShell Gallery 搜索新模块](/2020/05/22/searching-powershell-gallery-for-new-modules)
+* [2020-05-26 在控制台中提示输入凭据](/2020/05/26/prompting-for-credentials-in-console)
+* [2020-05-28 读取操作系统详情](/2020/05/28/reading-operating-system-details)
+
+2020 年 06 月
+-------------
+* [2020-06-01 解析 Windows 产品密钥（第 1 部分）](/2020/06/01/decoding-windows-product-key-part-1)
+* [2020-06-03 解析 Windows 产品密钥（第 2 部分）](/2020/06/03/decoding-windows-product-key-part-2)
+* [2020-06-05 添加参数自动完成（第 1 部分）](/2020/06/05/adding-argument-completion-part-1)
