(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1728,3 +1728,6 @@ tags:
 * [2020-06-01 解析 Windows 产品密钥（第 1 部分）](/2020/06/01/decoding-windows-product-key-part-1)
 * [2020-06-03 解析 Windows 产品密钥（第 2 部分）](/2020/06/03/decoding-windows-product-key-part-2)
 * [2020-06-05 添加参数自动完成（第 1 部分）](/2020/06/05/adding-argument-completion-part-1)
+* [2020-06-09 添加参数自动完成（第 2 部分）](/2020/06/09/adding-argument-completion-part-2)
+* [2020-06-11 自学习参数完成](/2020/06/11/auto-learning-argument-completion)
+* [2020-06-15 转换十六进制数据](/2020/06/15/converting-hex-numbers)
