(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1731,3 +1731,15 @@ tags:
 * [2020-06-09 添加参数自动完成（第 2 部分）](/2020/06/09/adding-argument-completion-part-2)
 * [2020-06-11 自学习参数完成](/2020/06/11/auto-learning-argument-completion)
 * [2020-06-15 转换十六进制数据](/2020/06/15/converting-hex-numbers)
+* [2020-06-17 局域网唤醒](/2020/06/17/wake-on-lan)
+* [2020-06-19 使用断言](/2020/06/19/using-assertions)
+* [2020-06-23 移除空白的属性](/2020/06/23/removing-empty-properties)
+* [2020-06-25 在网格视图窗口中将对象数据显示为表格](/2020/06/25/showing-object-data-as-table-in-a-grid-view-window)
+* [2020-06-29 改变操作系统描述](/2020/06/29/changing-operating-system-description)
+
+2020 年 07 月
+-------------
+* [2020-07-01 操作系统的启动和安装时间](/2020/07/01/boot-and-install-time-for-operating-system)
+* [2020-07-03 识别 Windows 类型](/2020/07/03/identifying-windows-type)
+* [2020-07-07 识别操作系统详细信息](/2020/07/07/identifying-operating-system-details)
+* [2020-07-09 忽略（任何）输出](/2020/07/09/discarding-any-output)
