(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1743,3 +1743,6 @@ tags:
 * [2020-07-03 识别 Windows 类型](/2020/07/03/identifying-windows-type)
 * [2020-07-07 识别操作系统详细信息](/2020/07/07/identifying-operating-system-details)
 * [2020-07-09 忽略（任何）输出](/2020/07/09/discarding-any-output)
+* [2020-07-13 丢弃数据流](/2020/07/13/discarding-streams)
+* [2020-07-15 禁止 Write-Host 语句输出](/2020/07/15/silencing-write-host-statements)
+* [2020-07-17 重定向流](/2020/07/17/redirecting-streams)
