(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1746,3 +1746,15 @@ tags:
 * [2020-07-13 丢弃数据流](/2020/07/13/discarding-streams)
 * [2020-07-15 禁止 Write-Host 语句输出](/2020/07/15/silencing-write-host-statements)
 * [2020-07-17 重定向流](/2020/07/17/redirecting-streams)
+* [2020-07-21 显示 Wi-Fi 配置](/2020/07/21/showing-wi-fi-profiles)
+* [2020-07-23 导出 Wi-Fi 密码](/2020/07/23/dumping-wi-fi-passwords)
+* [2020-07-27 显示 Wi-Fi 的 SSID](/2020/07/27/showing-wi-fi-ssids)
+* [2020-07-29 添加 Azure 的 PowerShell 命令](/2020/07/29/adding-powershell-commands-for-azure)
+* [2020-07-31 添加 SharePoint 的 PowerShell 命令](/2020/07/31/adding-powershell-commands-for-sharepoint)
+
+2020 年 08 月
+-------------
+* [2020-08-04 详细的电池报告](/2020/08/04/sophisticated-battery-report)
+* [2020-08-06 读取 4K 哈希](/2020/08/06/reading-4k-hash)
+* [2020-08-10 验证用户帐户密码（第 1 部分）](/2020/08/10/validating-user-account-passwords-part-1)
+* [2020-08-12 验证用户帐户密码（第 2 部分）](/2020/08/12/validating-user-account-passwords-part-2)
