(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1756,5 +1756,10 @@ tags:
 -------------
 * [2020-08-04 详细的电池报告](/2020/08/04/sophisticated-battery-report)
 * [2020-08-06 读取 4K 哈希](/2020/08/06/reading-4k-hash)
-* [2020-08-10 验证用户帐户密码（第 1 部分）](/2020/08/10/validating-user-account-passwords-part-1)
-* [2020-08-12 验证用户帐户密码（第 2 部分）](/2020/08/12/validating-user-account-passwords-part-2)
+* [2020-08-10 验证用户账户密码（第 1 部分）](/2020/08/10/validating-user-account-passwords-part-1)
+* [2020-08-12 验证用户账户密码（第 2 部分）](/2020/08/12/validating-user-account-passwords-part-2)
+* [2020-08-14 验证用户账户密码（第 3 部分）](/2020/08/14/validating-user-account-passwords-part-3)
+* [2020-08-18 动态创建 PowerShell 函数](/2020/08/18/creating-powershell-functions-dynamically)
+* [2020-08-20 加速 PowerShell 远程操作](/2020/08/20/speeding-up-powershell-remoting)
+* [2020-08-24 下载有用的脚本](/2020/08/24/downloading-useful-scripts)
+* [2020-08-26 管理自启动项](/2020/08/26/managing-autostarts)
