(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1763,3 +1763,4 @@ tags:
 * [2020-08-20 加速 PowerShell 远程操作](/2020/08/20/speeding-up-powershell-remoting)
 * [2020-08-24 下载有用的脚本](/2020/08/24/downloading-useful-scripts)
 * [2020-08-26 管理自启动项](/2020/08/26/managing-autostarts)
+* [2020-08-28 删除多个子文件夹](/2020/08/28/deleting-multiple-subfolders)
