(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1764,3 +1764,13 @@ tags:
 * [2020-08-24 下载有用的脚本](/2020/08/24/downloading-useful-scripts)
 * [2020-08-26 管理自启动项](/2020/08/26/managing-autostarts)
 * [2020-08-28 删除多个子文件夹](/2020/08/28/deleting-multiple-subfolders)
+
+2020 年 09 月
+-------------
+* [2020-09-01 删除 Microsoft Teams 缓存数据](/2020/09/01/deleting-microsoft-teams-cache-data)
+* [2020-09-03 检测已安装的防病毒产品](/2020/09/03/identifying-installed-antivirus-product)
+* [2020-09-07 检测防病毒引擎状态](/2020/09/07/identifying-antivirus-engine-state)
+* [2020-09-09 启用或禁用实时防病毒保护](/2020/09/09/enabling-and-disabling-realtime-antivirus-protection)
+* [2020-09-11 使用 $Is* 变量](/2020/09/11/using-is-variables)
+* [2020-09-15 在 PowerShell ISE 中使用 PowerShell 7](/2020/09/15/using-powershell-7-inside-powershell-ise)
+* [2020-09-17 设置和清除信任的主机](/2020/09/17/setting-and-clearing-trusted-hosts)
