(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1774,3 +1774,19 @@ tags:
 * [2020-09-11 使用 $Is* 变量](/2020/09/11/using-is-variables)
 * [2020-09-15 在 PowerShell ISE 中使用 PowerShell 7](/2020/09/15/using-powershell-7-inside-powershell-ise)
 * [2020-09-17 设置和清除信任的主机](/2020/09/17/setting-and-clearing-trusted-hosts)
+* [2020-09-21 摆脱 Get-EventLog](/2020/09/21/get-rid-of-get-eventlog)
+* [2020-09-23 识别用户 Profile](/2020/09/23/identifying-user-profile)
+* [2020-09-25 使用 Profile 脚本](/2020/09/25/using-profile-scripts2)
+* [2020-09-29 PowerShell技能连载-检查配置文件脚本（第 1 部分）](/2020/09/29/checking-profile-scripts-part-1)
+
+2020 年 10 月
+-------------
+* [2020-10-01 PowerShell技能连载-检查配置文件脚本（第 2 部分）](/2020/10/01/checking-profile-scripts-part-2)
+* [2020-10-05 在没有管理员特权的情况下更新帮助](/2020/10/05/updating-help-without-admin-privileges)
+* [2020-10-07 使用在线帮助（第 1 部分）](/2020/10/07/using-online-help-part-1)
+* [2020-10-09 使用在线帮助（第 2 部分）](/2020/10/09/using-online-help-part-2)
+* [2020-10-13 识别 PowerShell 宿主和路径](/2020/10/13/identifying-powershell-host-and-path)
+* [2020-10-15 将文件路径转为 8.3 格式（第 1 部分）](/2020/10/15/converting-file-paths-to-8-3-part-1)
+* [2020-10-19 将文件路径转为 8.3 格式（第 2 部分）](/2020/10/19/converting-file-paths-to-8-3-part-2)
+* [2020-10-21 测试应用程序是否存在](/2020/10/21/test-whether-applications-exist)
+* [2020-10-23 试用新的 SSH 远程操作](/2020/10/23/test-driving-new-ssh-remoting)
