(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1790,3 +1790,14 @@ tags:
 * [2020-10-19 将文件路径转为 8.3 格式（第 2 部分）](/2020/10/19/converting-file-paths-to-8-3-part-2)
 * [2020-10-21 测试应用程序是否存在](/2020/10/21/test-whether-applications-exist)
 * [2020-10-23 试用新的 SSH 远程操作](/2020/10/23/test-driving-new-ssh-remoting)
+* [2020-10-27 以可点击图标的方式部署 PowerShell（第 1 部分）](/2020/10/27/deploy-powershell-as-clickable-icons-part-1)
+* [2020-10-29 以可点击图标的方式部署 PowerShell（第 2 部分）](/2020/10/29/deploy-powershell-as-clickable-icons-part-2)
+
+2020 年 11 月
+-------------
+* [2020-11-02 彻底删除 AD 对象](/2020/11/02/permanently-deleting-ad-objects)
+* [2020-11-04 为任何用户启动 Windows 终端](/2020/11/04/launching-windows-terminal-for-any-user)
+* [2020-11-06 将 Windows Terminal 变成便携式应用程序](/2020/11/06/turn-windows-terminal-into-a-portable-app)
+* [2020-11-10 调优 Windows Terminal](/2020/11/10/fine-tuning-windows-terminal)
+* [2020-11-12 创建图标](/2020/11/12/creating-icons)
+* [2020-11-18 管理已安装的模块（第 1 部分）](/2020/11/18/managing-installed-modules-part-1)
