(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1801,3 +1801,11 @@ tags:
 * [2020-11-10 调优 Windows Terminal](/2020/11/10/fine-tuning-windows-terminal)
 * [2020-11-12 创建图标](/2020/11/12/creating-icons)
 * [2020-11-18 管理已安装的模块（第 1 部分）](/2020/11/18/managing-installed-modules-part-1)
+* [2020-11-20 管理已安装的模块（第 2 部分）](/2020/11/20/managing-installed-modules-part-2)
+* [2020-11-24 查找 PowerShell 宿主参数和可执行文件](/2020/11/24/finding-powershell-host-arguments-and-executable)
+* [2020-11-26 禁止错误提示](/2020/11/26/suppressing-errors)
+* [2020-11-30 恒定函数](/2020/11/30/constant-functions)
+
+2020 年 12 月
+-------------
+* [2020-12-02 读取上次登录的用户和其他注册表值](/2020/12/02/reading-last-logged-on-user-and-other-registry-values)
