(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1809,3 +1809,6 @@ tags:
 2020 年 12 月
 -------------
 * [2020-12-02 读取上次登录的用户和其他注册表值](/2020/12/02/reading-last-logged-on-user-and-other-registry-values)
+* [2020-12-04 读取事件日志（第 1 部分）](/2020/12/04/reading-event-logs-part-1)
+* [2020-12-08 读取事件日志（第 2 部分）](/2020/12/08/reading-event-logs-part-2)
+* [2020-12-10 读取事件日志（第 3 部分）](/2020/12/10/reading-event-logs-part-3)
