--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1800,6 +1800,7 @@ tags:
 * [2020-11-06 将 Windows Terminal 变成便携式应用程序](/2020/11/06/turn-windows-terminal-into-a-portable-app)
 * [2020-11-10 调优 Windows Terminal](/2020/11/10/fine-tuning-windows-terminal)
 * [2020-11-12 创建图标](/2020/11/12/creating-icons)
+* [2020-11-16 修复 PowerShell Gallery 的访问](/2020/11/16/repairing-powershell-gallery-access)
 * [2020-11-18 管理已安装的模块（第 1 部分）](/2020/11/18/managing-installed-modules-part-1)
 * [2020-11-20 管理已安装的模块（第 2 部分）](/2020/11/20/managing-installed-modules-part-2)
 * [2020-11-24 查找 PowerShell 宿主参数和可执行文件](/2020/11/24/finding-powershell-host-arguments-and-executable)
