(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1813,3 +1813,26 @@ tags:
 * [2020-12-04 读取事件日志（第 1 部分）](/2020/12/04/reading-event-logs-part-1)
 * [2020-12-08 读取事件日志（第 2 部分）](/2020/12/08/reading-event-logs-part-2)
 * [2020-12-10 读取事件日志（第 3 部分）](/2020/12/10/reading-event-logs-part-3)
+* [2020-12-14 读取事件日志（第 4 部分）](/2020/12/14/reading-event-logs-part-4)
+* [2020-12-16 保持 Windows 和 PowerShell 持续运行](/2020/12/16/keeping-windows-and-powershell-running)
+* [2020-12-18 读取已安装的软件（第 1 部分）](/2020/12/18/reading-installed-software-part-1)
+* [2020-12-22 读取已安装的软件（第 2 部分）](/2020/12/22/reading-installed-software-part-2)
+* [2020-12-24 标识本地管理员帐户的名称](/2020/12/24/identifying-name-of-local-administrator-account)
+* [2020-12-28 管理本地组成员（第 1 部分）](/2020/12/28/managing-local-group-members-part-1)
+* [2020-12-30 管理本地组成员（第 2 部分）](/2020/12/30/managing-local-group-members-part-2)
+
+2021 年
+=======
+
+2021 年 01 月
+-------------
+* [2021-01-01 更好的递归](/2021/01/01/a-better-recursion)
+* [2021-01-05 了解 PowerShell 中的 REST Web 服务](/2021/01/05/understanding-rest-web-services-in-powershell)
+* [2021-01-07 查找未使用（或使用过的）驱动器号](/2021/01/07/finding-unused-or-used-drive-letters)
+* [2021-01-11 获取开机以来经历的时间](/2021/01/11/controlling-uptime)
+* [2021-01-13 更好的 NetStat（第 1 部分）](/2021/01/13/a-better-netstat-part-1)
+* [2021-01-15 更好的 NetStat（第 2 部分）](/2021/01/15/a-better-netstat-part-2)
+* [2021-01-19 更好的 NetStat（第 3 部分）](/2021/01/19/a-better-netstat-part-3)
+* [2021-01-21 更好的 NetStat（第 4 部分）](/2021/01/21/a-better-netstat-part-4)
+* [2021-01-25 检测未知的网络监听器](/2021/01/25/identifying-unknown-network-listeners)
+* [2021-01-27 识别位置和公共 IP](/2021/01/27/identifying-location-and-public-ip)
