(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1844,3 +1844,6 @@ tags:
 * [2021-02-04 使用 GitHub Web Service（第 2 部分）](/2021/02/04/using-github-web-services-part-2)
 * [2021-02-08 将文本翻译成莫尔斯电码](/2021/02/08/translating-text-to-morse-code)
 * [2021-02-10 在 Windows 上安装 PowerShell 7 的最简单方法](/2021/02/10/simplest-way-to-install-powershell-7-on-windows)
+* [2021-02-12 探索 Windows 上的程序包管理器（第 1 部分）](/2021/02/12/discovering-package-managers-on-windows-part-1)
+* [2021-02-18 Cross-Platform Out-GridView](/2021/02/18/cross-platform-out-gridview)
+* [2021-02-22 修复 Install-Module (PowerShellGet)](/2021/02/22/repairing-install-module-powershellget)
