(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1848,3 +1848,5 @@ tags:
 * [2021-02-16 探索 Windows 上的程序包管理器（第 2 部分）](/2021/02/16/discovering-package-managers-on-windows-part-2)
 * [2021-02-18 跨平台的 Out-GridView](/2021/02/18/cross-platform-out-gridview)
 * [2021-02-22 修复 Install-Module (PowerShellGet)](/2021/02/22/repairing-install-module-powershellget)
+* [2021-02-24 查找 PowerShell 命令](/2021/02/24/finding-powershell-commands)
+* [2021-02-26 修复 VSCode PowerShell 问题（第 1 部分）](/2021/02/26/fixing-vscode-powershell-issues-part-1)
