(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1850,3 +1850,8 @@ tags:
 * [2021-02-22 修复 Install-Module (PowerShellGet)](/2021/02/22/repairing-install-module-powershellget)
 * [2021-02-24 查找 PowerShell 命令](/2021/02/24/finding-powershell-commands)
 * [2021-02-26 修复 VSCode PowerShell 问题（第 1 部分）](/2021/02/26/fixing-vscode-powershell-issues-part-1)
+
+2021 年 03 月
+-------------
+* [2021-03-02 修复 VSCode PowerShell 问题（第 2 部分）](/2021/03/02/fixing-vscode-powershell-issues-part-2)
+* [2021-03-04 使用编码标准](/2021/03/04/using-encoding-standards)
