--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1861,3 +1861,4 @@ tags:
 * [2021-03-16 探索文件夹结构（第 1 部分）](/2021/03/16/exploring-folder-structures-part-1)
 * [2021-03-18 探索文件夹结构（第 2 部分）](/2021/03/18/exploring-folder-structures-part-2)
 * [2021-03-22 识别网络访问的来源](/2021/03/22/identifying-origin-of-network-access)
+* [2021-03-24 研究 PowerShell 控制台输出](/2021/03/24/investigating-powershell-console-output)
