(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1864,3 +1864,7 @@ tags:
 * [2021-03-24 研究 PowerShell 控制台输出](/2021/03/24/investigating-powershell-console-output)
 * [2021-03-26 使用 BITS 来下载文件（第 1 部分）](/2021/03/26/using-bits-to-download-files-part-1)
 * [2021-03-30 使用 BITS 来下载文件（第 2 部分）](/2021/03/30/using-bits-to-download-files-part-2)
+
+2021 年 04 月
+-------------
+* [2021-04-01 查找上次登录的用户](/2021/04/01/finding-last-logged-on-user)
